--- a/introducao/primeira-app-v2.html
+++ b/introducao/primeira-app-v2.html
@@ -1,5 +1,6 @@
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app">
+    <input type="text" v-on:input="alterarTitulo">
     <p>{{titulo}}</p>
 </div>
 
@@ -9,5 +10,10 @@
         data: {
             titulo: 'Usando VueJs 2!'
         },
+        methods:{
+            alterarTitulo(event){
+                this.titulo = event.target.value
+            }
+        }
     })
 </script>
