--- a/DOM/templete-v4.html
+++ b/DOM/templete-v4.html
@@ -2,7 +2,7 @@
 
 <div id="app">
     <p>{{ titulo }}</p>
-    <p>{{ saudacao() }}</p>
+    <p c3r-bind="abc">{{ saudacao() }}</p>
     <a v-bind:href="link">Google</a>
 </div>
 
