--- a/DOM/estilo.v2.html
+++ b/DOM/estilo.v2.html
@@ -22,7 +22,7 @@
     }
 </style>
 <div id="app">
-    <div class="demo" :class="{c1: aplicarC1}"
+    <div class="demo" :class="estilo1"
      @click="aplicarC1 = !aplicarC1"></div>
     <div class="demo"></div>
     <div class="demo"></div>
@@ -33,6 +33,15 @@
         el: '#app',
         data: {
             aplicarC1: false
+        },
+        computed:{
+            estilo1(){
+                return{
+                    c1: this.aplicarC1,
+                    c2: !this.aplicarC1
+
+                }
+            }
         }
     })
 </script>
