--- a/condicionais-e-listas/condicionais-v3.html
+++ b/condicionais-e-listas/condicionais-v3.html
@@ -11,6 +11,13 @@
     <button @click="logado = !logado">
         {{logado ? 'Sair' : 'Entrar'}}</button>
         <input type="checkbox" v-model="anonimo">
+        <hr>
+        <footer v-show="logado">
+            Desenvolvido para você!
+        </footer>
+        <footer v-show="!logado">
+            Desenvolvido para você que é desconhecido!
+        </footer>
 </div>
 
 <script>
