--- a/projeto-01-monstro/index.html
+++ b/projeto-01-monstro/index.html
@@ -5,11 +5,30 @@
     <title>Matador de Monstro</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googlepis.com/css?family=Montserrat:300,400,600" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 </head>
 <body>
     <div id="app">
-        <div class="panel scores"></div>
+        <div class="panel scores">
+            <div class="score">
+                <h1>Jogador</h1>
+                <div class="life-bar">
+                    <div class="life"
+                    :class="{danger: playerLife < 20}"
+                    :style="{width: playerLife + '%'}"></div>
+                </div>
+                <div>{{ playerLife }}%</div>
+            </div>
+            <div class="score">
+                <h1>Monstro</h1>
+                <div class="life-bar">
+                    <div class="life"
+                    :class="{danger: monsterLife < 20}"
+                    :style="{width: monsterLife + '%'}"></div>
+                </div>
+                <div>{{ monsterLife }}%</div>
+            </div>
+        </div>
         <div class="panel result"></div>
         <div class="panel buttons"></div>
         <div class="panel logs"></div>
