--- a/projeto-01-monstro/index.html
+++ b/projeto-01-monstro/index.html
@@ -34,7 +34,16 @@
             <div v-else class="lose">Você perdeu! :(</div>
         </div>
 
-        <div class="panel buttons"></div>
+        <div class="panel buttons">
+            <template v-if="running">
+            <button class="btn attack">Ataque</button>
+            <button class="btn especial-attack">Ataque Especial</button>
+            <button class="btn heal">Curar</button>
+            <button class="btn give-up">Desistir</button>
+            <button class="btn new-game">Iniciar Jogo</button>
+        </template>
+        <button v-else class="btn new-game">Iniciar Jogo</button>
+        </div>
         <div class="panel logs"></div>
     </div>
     <script src="app.js"></script>
