--- a/projeto-01-monstro/index.html
+++ b/projeto-01-monstro/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Matador de Monstro</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googlepis.com/css?family=Montserrat:300,400,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     </head>
     <body>
@@ -36,13 +36,16 @@
 
         <div class="panel buttons">
             <template v-if="running">
-            <button class="btn attack">Ataque</button>
-            <button class="btn especial-attack">Ataque Especial</button>
+            <button @click="attack(false)"
+            class="btn attack">Ataque</button>
+            <button @click="attack(true)"
+            class="btn especial-attack">Ataque Especial</button>
             <button class="btn heal">Curar</button>
-            <button class="btn give-up">Desistir</button>
-            <button class="btn new-game">Iniciar Jogo</button>
+            <button @click="running = false"
+            class="btn give-up">Desistir</button>
         </template>
-        <button v-else class="btn new-game">Iniciar Jogo</button>
+        <button v-else @click="startGame"
+        class="btn new-game">Iniciar Jogo</button>
         </div>
         <div class="panel logs"></div>
     </div>
